2006-02-26  Lars Clausen  <lars@raeder.dk>

	* doc/en/dia.xml: 
	* doc/pl/dia.xml: 
	* config.h.win32: 
	* configure.in: 
	* NEWS: 

	* lib/element.h (ELEMENT_COMMON_PROPERTIES): Turning off setting
	of element_width and element_height until constraints can be 
	properly checked.  Bug #328200

	* dia.spec (Requires): Updated GTK requirements.

2006-02-25  Lars Clausen  <lars@raeder.dk>

	* lib/diaarrowchooser.c (dia_arrow_chooser_new): Also making sure
	other dynamic menus have proper translation.

	* lib/widgets.c (dia_dynamic_menu_create_string_item): 
	* app/interface.c (cmp_names): 
	* app/sheets.c (sheets_optionmenu_create): 
	* lib/sheet.c (load_register_sheet): Using C locale for sheet
	names internally, translating on display instead.  Also sorting
	by gettext order explicitly.  Bug #328570.

2006-02-25  Hans Breuer  <hans@breuer.org>

	* app/interface.c(get_sheet_by_name) : be more tolerant about 
	localization of the sheet name. ( Steffen Macke, #332070 )
	
	* app/app_procs.c(app_init) : if GDK_WINDOWING_WIN32 call gtk_init()
	in any case. In contrast to X11/*nix displays are not optional on
	windoze. And we need some help of gtk to render text to bitmaps.
	( Rob McDonald, bug #332177 )
	
2006-02-21  Lars Clausen  <lars@raeder.dk>

	* NEWS: 
	* doc/pl/dia.xml: 
	* doc/en/dia.xml: 
	* configure.in: 
	* config.h.win32: Update to -pre2.

	* lib/beziershape.c (add_handles): Fixing CP pos calculation for
	adding new CP's.  Fixes bug #331557.

2006-02-20  Lars Clausen  <lars@raeder.dk>

	* lib/diarenderer.c (find_center_point): Better handling of some
	degenerate cases.
	(draw_arc_with_arrows): Draw line in all cases.  Doesn't handle
	the truly degenerate cases well enough yet, but at least doesn't
	break on common cases.  Probably need to do something special for
	arcs with start and end point the same.  Improves but does not
	entirely fix bug #331372.

2006-02-20  Hans Breuer  <hans@breuer.org>
